# ai-roundtable

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  config.yml  pyproject.toml  requirements.txt  roundtable.py
.github/workflows/: publish.yml
ai_roundtable/: __init__.py  __main__.py  config.py  default_config.yml  main.py
ai_roundtable/adapters/: __init__.py  agy.py  base.py  claude.py  codex.py  engine.py  generic.py  kimi.py
ai_roundtable/core/: context.py  deep.py  events.py  legacy.py  parsing.py  prompts.py  quick.py  store.py
ai_roundtable/prompts/: README.md  compress.md  guest.md  solo_roundtable.md
ai_roundtable/tui/: app.py  history_modal.py  settings_screen.py  styles.py  widgets.py
prompts/: compare.md  conductor_plan.md  conductor_worker.md  guest_quick.md  moderator.md  opening.md
src/: __init__.py  cli_caller.py  conductor.py  context_manager.py  default_config.yml  history.py  main.py  orchestrator.py  prompt_loader.py  quick.py  settings.py  tui.py
src/prompts/: conductor_synthesize.md  guest_quick.md  opening.md
tests/: conftest.py  test_adapters.py  test_config.py  test_context.py  test_parsing.py  test_prompts.py  test_sessions.py  test_store.py  test_tui.py
