[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-roundtable"
version = "0.0.38"
description = "A terminal UI that runs Claude, Gemini, and Codex side-by-side in parallel deliberation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "HiJiangChuan", email = "hijiangchuan@gmail.com" }]
keywords = ["ai", "claude", "gemini", "codex", "tui", "terminal", "llm", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "textual>=0.47.0",
    "pyyaml>=6.0",
    "Pillow>=10.0",
]

[project.scripts]
ai-roundtable = "ai_roundtable.main:main"

[project.urls]
Homepage = "https://github.com/HiJiangChuan/ai-roundtable"
Repository = "https://github.com/HiJiangChuan/ai-roundtable"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "ai_roundtable"

