[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-roundtable"
version = "0.0.71"
description = "A terminal UI that runs Claude, Antigravity (agy), Codex, and Kimi side-by-side in parallel deliberation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "HiJiangChuan", email = "hijiangchuan@gmail.com" }]
keywords = ["ai", "claude", "agy", "antigravity", "codex", "tui", "terminal", "llm", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "textual>=8.0,<9",
    "pyyaml>=6.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
]

[project.scripts]
ai-roundtable = "ai_roundtable.main:main"

[project.urls]
Homepage = "https://github.com/HiJiangChuan/ai-roundtable"
Repository = "https://github.com/HiJiangChuan/ai-roundtable"

[tool.hatch.build.targets.wheel]
packages = ["ai_roundtable"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
